# IPO-Research-Intelligence-Platform

./: .dockerignore  .env.example  .gitignore  README.md  benchmark.py  docker-compose.yml  evaluate.py  generate_mocks.py  profiling_report.md  pyproject.toml  test_ollama_provider.py  test_pipeline.py  update_orchestrator.py  verification.py  verify_gemini_business.py  verify_gemini_financial.py  verify_gemini_governance.py  verify_gemini_risk.py  verify_gemini_valuation.py  verify_phase4.py  verify_rag.py
agents/agent_common/: __init__.py  base_agent.py  lifecycle.py  llm.py  llm_agent.py  llm_client.py  ollama_provider.py  provider_factory.py  retry.py
agents/business_analysis/: README.md  __init__.py  agent.py  models.py  prompts.py  schemas.py  service.py
agents/chunking_embedding/: README.md  __init__.py  agent.py  models.py  prompts.py  schemas.py  service.py
agents/document_intake/: README.md  __init__.py  agent.py  prompts.py  schemas.py  service.py
agents/evaluation/: README.md  __init__.py  agent.py  models.py  prompts.py  schemas.py  service.py
agents/financial_analysis/: README.md  __init__.py  agent.py  models.py  prompts.py  schemas.py  service.py
agents/governance/: README.md  __init__.py  agent.py  models.py  prompts.py  schemas.py  service.py
agents/orchestrator/: README.md  __init__.py  agent.py  prompts.py  schemas.py  service.py
agents/parser_ocr/: README.md  __init__.py  agent.py  models.py  prompts.py  schemas.py  service.py
agents/report_generator/: README.md  __init__.py  agent.py  models.py  prompts.py  schemas.py  service.py
agents/retrieval/: README.md  __init__.py  agent.py  models.py  prompts.py  schemas.py  service.py
agents/valuation/: README.md  (+6 more)
backend/: Dockerfile  alembic.ini  requirements.txt
config/: agent_config.yaml  governance_rules.yaml  llm_config.yaml  rag_config.yaml
embeddings/: __init__.py  batch_embedder.py  embedding_service.py  model_registry.py  provider.py
eval/: benchmark_dataset.json  metrics.py  reporter.py
evaluation/: __init__.py
events/: __init__.py  bus.py  handlers.py  models.py  publisher.py  subscriber.py
frontend/: Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
output/: evaluation.html  evaluation.json  summary.md
rag/: __init__.py  chunker.py  citation_manager.py  config.py  context_builder.py  embedding_service.py  loader.py  pipeline.py  prompt_builder.py  retriever.py
scripts/: seed_db.py  setup_dev.sh
storage/: __init__.py  base.py  local_storage.py  minio_storage.py
vector_store/: __init__.py  base.py  collection_manager.py  hybrid_search.py  qdrant_client.py
workers/: __init__.py  celery_app.py  tasks.py
(+108 files in other folders)
